Adding link and icons

--- a/index.html
+++ b/index.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X6DENT</title>
+    <title>6DENT</title>
+    <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body>
-    <main>
+<body class='X6DENT'>
+    <main class='X6DENT__Container'>
         <div class='X6DENT__Picture'>
             <img src='./images/jacket.jpg' alt='Homme portant un drapeau' />
         </div>
 
         <ul class='X6DENT__Links'>
-            <li><a href='#'>Spotify</a></li>
-            <li><a href='#'>Spotify</a></li>
-            <li><a href='#'>Spotify</a></li>
-            <li><a href='#'>Spotify</a></li>
-            <li><a href='#'>Spotify</a></li>
+            <li class='X6DENT__Link'>
+                <a href='#'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" ><path d="m12 24c6.624 0 12-5.376 12-12s-5.376-12-12-12-12 5.376-12 12 5.376 12 12 12zm4.872-6.344v.001c-.807 0-3.356-2.828-10.52-1.36-.189.049-.436.126-.576.126-.915 0-1.09-1.369-.106-1.578 3.963-.875 8.013-.798 11.467 1.268.824.526.474 1.543-.265 1.543zm1.303-3.173c-.113-.03-.08.069-.597-.203-3.025-1.79-7.533-2.512-11.545-1.423-.232.063-.358.126-.576.126-1.071 0-1.355-1.611-.188-1.94 4.716-1.325 9.775-.552 13.297 1.543.392.232.547.533.547.953-.005.522-.411.944-.938.944zm-13.627-7.485c4.523-1.324 11.368-.906 15.624 1.578 1.091.629.662 2.22-.498 2.22l-.001-.001c-.252 0-.407-.063-.625-.189-3.443-2.056-9.604-2.549-13.59-1.436-.175.048-.393.125-.625.125-.639 0-1.127-.499-1.127-1.142 0-.657.407-1.029.842-1.155z"/></svg>
+                    Spotify
+                </a>
+            </li>
+            <li class='X6DENT__Link'>
+                <a href='#'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 97.848 97.848" xml:space="preserve"><g><g><rect y="70.818" width="17.838" height="5.406"/><rect y="63.791" width="17.838" height="5.408"/><rect y="56.764" width="17.838" height="5.408"/><rect y="49.736" width="17.838" height="5.405"/><rect y="42.709" width="17.838" height="5.404"/><rect x="20.001" y="70.818" width="17.84" height="5.406"/><rect x="20.001" y="63.791" width="17.84" height="5.408"/><rect x="20.001" y="56.764" width="17.84" height="5.408"/><rect x="40.004" y="70.818" width="17.84" height="5.406"/><rect x="40.004" y="63.791" width="17.84" height="5.408"/><rect x="40.004" y="56.764" width="17.84" height="5.408"/><rect x="40.004" y="49.736" width="17.84" height="5.405"/><rect x="40.004" y="42.709" width="17.84" height="5.404"/><rect x="40.004" y="35.68" width="17.84" height="5.406"/><rect x="40.004" y="28.653" width="17.84" height="5.407"/><rect x="60.005" y="70.818" width="17.841" height="5.406"/><rect x="60.005" y="63.791" width="17.841" height="5.408"/><rect x="60.005" y="56.764" width="17.841" height="5.408"/><rect x="60.005" y="49.736" width="17.841" height="5.405"/><rect x="60.005" y="42.709" width="17.841" height="5.404"/><rect x="80.008" y="70.818" width="17.84" height="5.406"/><rect x="80.008" y="63.791" width="17.84" height="5.408"/><rect x="80.008" y="56.762" width="17.84" height="5.406"/><rect x="80.008" y="49.736" width="17.84" height="5.406"/><rect x="80.008" y="42.707" width="17.84" height="5.407"/><rect x="80.008" y="35.681" width="17.84" height="5.404"/><rect x="80.008" y="28.652" width="17.84" height="5.404"/><rect x="80.008" y="21.623" width="17.84" height="5.406"/></g></g></svg>
+                    Deezer
+                </a>
+            </li>
+            <li class='X6DENT__Link'>
+                <a href='#'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" ><path d="m20.25 11c-.267 0-.529.029-.782.082-.337-3.409-3.222-6.082-6.718-6.082-.414 0-.75.336-.75.75v12c0 .414.336.75.75.75h7.5c2.069 0 3.75-1.681 3.75-3.75 0-2.067-1.681-3.75-3.75-3.75z"/><path d="m9 7.25v10.5c0 .414.336.75.75.75s.75-.336.75-.75v-10.5c0-.414-.336-.75-.75-.75s-.75.336-.75.75z"/><path d="m6 10.25v7.5c0 .414.336.75.75.75s.75-.336.75-.75v-7.5c0-.414-.336-.75-.75-.75s-.75.336-.75.75z"/><path d="m3 17.75c0 .414.336.75.75.75s.75-.336.75-.75v-7.5c0-.414-.336-.75-.75-.75s-.75.336-.75.75z"/><path d="m.75 18.5c.414 0 .75-.336.75-.75v-4.5c0-.414-.336-.75-.75-.75s-.75.336-.75.75v4.5c0 .414.336.75.75.75z"/></svg>
+                    SoundCloud
+                </a>
+            </li>
         </ul>
     </main>
 
