--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <meta property="og:url" content="http://www.x6dent.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="X6DENT" />
+    <meta property="og:description" content="Écouter X6DENT" />
+    <meta property="og:image" content="./images/jacket.png" />
+    <meta property="og:locale" content="fr_FR" />
+
 </head>
 <body class='X6DENT'>
     <main class='X6DENT__Container'>
