Compressing images for better performances

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="X6DENT" />
     <meta property="og:description" content="Écouter X6DENT" />
-    <meta property="og:image" content="./images/jacket.png" />
+    <meta property="og:image" content="./images/jacket.jpg" />
     <meta property="og:locale" content="fr_FR" />
 
 </head>
