--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:image" content="./images/jacket.jpg" />
     <meta property="og:locale" content="fr_FR" />
 
+    <meta name="twitter:card" content="summary"></meta>
+
 </head>
 <body class='X6DENT'>
     <main class='X6DENT__Container'>
