Adding video in background

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 </a>
             </li>
         </ul>
+
+        <video class='X6DENT__Video' autoplay muted loop>
+            <source src="./images/bg_video.mp4"  type="video/mp4">
+        </video>
+
+        <div class='X6DENT__Overlay'></div>
     </main>
 
     <script src='main.js'></script>
