Improving some stuff

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+    <meta name="theme-color" content="#9473DE">
     <meta property="og:url" content="http://www.x6dent.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="X6DENT" />
     <meta property="og:description" content="Écouter X6DENT" />
     <meta property="og:image" content="./images/jacket.jpg" />
-    <meta property="og:locale" content="fr_FR" />
 
-    <meta name="twitter:card" content="summary"></meta>
+    <meta name="twitter:card" content="Découvrez le dernier album d'Abyllisse: X6DENT"></meta>
+    <meta name="description" content="Découvrez le dernier album d'Abyllisse: X6DENT">
+
 
 </head>
 <body class='X6DENT'>
     <main class='X6DENT__Container'>
         <div class='X6DENT__Picture'>
-            <img src='./images/jacket.jpg' alt='Homme portant un drapeau' />
+            <img src='./images/jacket.jpg' alt='Homme portant un drapeau' height="100%" width="100%" />
         </div>
 
         <ul class='X6DENT__Links'>
@@ -45,7 +46,7 @@
             </li>
         </ul>
 
-        <video class='X6DENT__Video' autoplay muted loop>
+        <video class='X6DENT__Video' autoplay muted loop preload="false">
             <source src="./images/bg_video.mp4"  type="video/mp4">
         </video>
 
