--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <img src='./images/jacket.jpg' alt='Homme portant un drapeau' height="100%" width="100%" />
         </div>
 
+        
+        <div class="X6DENT__Clips">
+
+            <div class='X6DENT__Clip'>
+                <iframe width="100%" src="https://www.youtube.com/embed/se1pALnmmXM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+    
+            <div class='X6DENT__Clip'>
+                <iframe width="100%" src="https://www.youtube.com/embed/E2VgG7JyDHQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <ul class='X6DENT__Links'>
             <li class='X6DENT__Link'>
                 <a target="_blank" href='https://open.spotify.com/album/4lwWRdgZh3gXdVELMrOze3?si=FXRThcVORoqEc-eGebJUGA'>
