Fixing counter issuer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         var zbraaa = document.querySelector('#zbraaa')
         
         var picture = document.querySelector('.X6DENT__Picture')
-        var count = 0
+        var firstCounter = 0
         
         picture.addEventListener('click', function (e) {
             firstCounter++
