--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <div class="X6DENT__Clips">
 
             <div class='X6DENT__Clip'>
+                <iframe width="100%" src="https://www.youtube.com/embed/2hfTVKM9ivw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <div class='X6DENT__Clip'>
                 <iframe width="100%" src="https://www.youtube.com/embed/se1pALnmmXM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
     
